Header: update menu

--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -46,35 +46,72 @@
                     <a href="/">Home</a>
                 </li>
                 <li class="menu-dropdown mega-menu-dropdown ">
-                    <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="/token" class="dropdown-toggle"> Tokens
+                    <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle"> Tokens
                         <i class="fa fa-angle-down"></i>
                     </a>
-                    <ul class="dropdown-menu" style="min-width: 410px">
+                    <ul class="dropdown-menu">
                         <li>
                             <div class="mega-menu-content">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <ul class="mega-menu-submenu">
                                             <li>
                                                 <a href="/token/0x84c470a995b42d95df2091fac2bad1178bdb83bc" class="iconify">
                                                     <i class="icon-pin"></i> TOPC</a>
                                             </li>
-                                            <!--<li>-->
-                                                <!--<a href="/dao" class="iconify">-->
-                                                    <!--<i class="icon-trash"></i> TheDAO</a>-->
-                                            <!--</li>-->
                                             <li>
                                                 <a href="/token" class="iconify">
-                                                    <i class="icon-puzzle"></i> View All Tokens </a>
+                                                    <i class="icon-puzzle"></i> View All Tokens</a>
                                             </li>
-
                                         </ul>
                                     </div>
-                                    <div class="col-md-6">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+                <li class="menu-dropdown mega-menu-dropdown ">
+                    <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle"> Contract
+                        <i class="fa fa-angle-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <div class="mega-menu-content">
+                                <div class="row">
+                                    <div class="col-md-12">
                                         <ul class="mega-menu-submenu">
                                             <li>
                                                 <a href="/" class="iconify">
-                                                    <i class="icon-paper-clip"></i> View Contracts (N/A)</a>
+                                                    <i class="icon-paper-clip"></i> View Contracts Internal Txns(N/A)</a>
+                                            </li>
+                                            <li>
+                                                <a href="/">
+                                                    <i class="icon-check"></i> Verify Contract(N/A)</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+                <li class="menu-dropdown mega-menu-dropdown ">
+                    <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle"> More
+                        <i class="fa fa-angle-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <div class="mega-menu-content">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <ul class="mega-menu-submenu">
+                                            <li>
+                                                <a href="/stats/miner_hashrate">
+                                                    <i class="fa fa-line-chart"></i> Signer Distribution Chart</a>
+                                            </li>
+                                            <li>
+                                                <a href="/stats/The_bomb_chart">
+                                                    <i class="fa fa-line-chart"></i> The Txns History</a>
                                             </li>
                                         </ul>
                                     </div>
