--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -7,7 +7,7 @@
                 <p> {{settings.about}} </p>
                 <span ng-bind-html="settings.poweredbyCustom" ng-if="settings.poweredbyCustom">{{settings.poweredbyCustom}}</span>
                 <!--<span ng-if="!settings.poweredbyCustom && settings.poweredbyEtcImage"><a href="https://github.com/ethereumproject/explorer" target="_blank"><img height="51px" src="{{settings.poweredbyEtcImage}}"></a></span>-->
-                <small>Powered by <a href="https://github.com/ethereumproject/explorer" target="_blank">Ethereum Explorer</a> </small>
+                <small>Powered by <a href="https://www.1won.com" target="_blank">{{settings.author}}</a> </small>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block right">
                 <h2>Follow Us On</h2>
